--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ summary,
   grid-template-columns: repeat(2, 40rem);
   row-gap: 3rem;
   column-gap: 3rem;
+  margin-bottom: 10vh;
 }
 .project:hover {
   transform: translateY(-5px);
