--- a/style.css
+++ b/style.css
@@ -118,3 +118,12 @@ a:active,
 a:hover {
   color: var(--link-color-hover);
 }
+
+@media (max-width: 1000px) {
+  .projects-grid {
+    grid-template-columns: repeat(1, 30rem) !important;
+  }
+  h1 {
+    font-size: 5rem;
+  }
+}
